# ffmpeg_go

./: CMakeLists.txt  README.md
dumpinfo/: dumpinfo.cpp
extractaudio/: extractAAC.cpp
libs/: libavdevice.dylib  libavfilter.dylib  libavformat.dylib  libavresample.dylib  libavutil.dylib  libpostproc.dylib  libswresample.dylib  libswscale.dylib
sdl2demo/: hellosdl2.cpp
sdlvideo/: sdlplayvideo.cpp
src/: demuxerdemo.cpp  demuxerdemo.h  ffmpeg_header.h  main.cpp  sdlplayvideo.h  sdlvideo.cpp  transfmt.cpp  transfmt.h
videos/: nianhui.aac
